--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           </a>
         </li>
         <li class="listItem">
-          <a href="https://www.youtube.com/" class="listaLink" title="youtube">
+          <a href="https://www.youtube.com/" class="listaLink" title="youtube" target="_blank" rel="noreferrer noopener">
             <div class="blok">
             <h2 class="listaTitlu">YouTube</h2>
             <p class="listaText">https://www.youtube.com/</p>
@@ -46,7 +46,7 @@
           </a>
         </li>
         <li class="listItem">
-          <a href="https://linkedin.com" class="listaLink" title="linkedin">
+          <a href="https://linkedin.com" class="listaLink" title="linkedin" target="_blank" rel="noreferrer noopener">
             <div class="blok">
             <h2 class="listaTitlu">Linkedin</h2>
             <p class="listaText">https://linkedin.com</p>
@@ -54,7 +54,7 @@
           </a>
         </li>
         <li class="listItem">
-          <a href="https://facebook.com" class="listaLink" title="facebook">
+          <a href="https://facebook.com" class="listaLink" title="facebook" target="_blank" rel="noreferrer noopener">
             <div class="blok">
             <h2 class="listaTitlu">Facebook</h2>
             <p class="listaText">https://facebook.com</p>
@@ -62,7 +62,7 @@
           </a>
         </li>
         <li class="listItem">
-          <a href="https://instagram.com" class="listaLink" title="instagram">
+          <a href="https://instagram.com" class="listaLink" title="instagram" target="_blank" rel="noreferrer noopener">
             <div class="blok">
             <h2 class="listaTitlu">Instagram</h2>
             <p class="listaText">https://instagram.com</p>
@@ -70,7 +70,7 @@
           </a>
         </li>
         <li class="listItem">
-          <a href="https://Twitter.com" class="listaLink" title="twitter">
+          <a href="https://Twitter.com" class="listaLink" title="twitter" target="_blank" rel="noreferrer noopener">
             <div class="blok">
             <h2 class="listaTitlu">Twitter</h2>
             <p class="listaText">https://Twitter.com</p>
